--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     "@types/express": "^4.0.33",
     "@types/inversify": "^2.0.31",
     "@types/mime": "0.0.29",
+    "@types/socket.io": "^1.4.27",
     "awesome-typescript-loader": "^3.0.0-beta.9",
     "bog": "^1.0.2",
     "compression": "^1.6.2",
     "es6-promise": "^3.2.1",
     "es6-shim": "^0.35.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "inversify": "^2.0.0-beta.8",
     "inversify-dts": "^1.0.5",
     "mime": "^1.3.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.9",
     "typescript": "^2.0.3",
-    "webpack": "^1.13.1",
+    "webpack": "^2.2.0",
     "webpack-livereload-plugin": "^0.8.1"
   }
 }
