--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "inversify": "^2.0.0-beta.8",
     "inversify-dts": "^1.0.5",
+    "lodash": "^4.17.4",
     "mime": "^1.3.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.9",
